# sr2_bringup

./: CMakeLists.txt  package.xml
components/: .neck.launch.swp  fts.launch  neck.launch  sick_visionary_t.launch
configs/: fts.yaml  powercube_driver.yaml  raw3_base_controller_afts.yaml  raw3_base_controller_fts.yaml  raw3_base_controller_fts_sim.yaml  robotrainer_base_controller.yaml  robotrainer_base_driver.yaml  sensor_configuration.yaml  sensor_configuration_sim.yaml
robot/: .sr2.launch.swp  leds_only.launch  mapping.launch  navigation.launch  robot.launch  robot_sim.launch  robot_with_fts.launch  robotrainer.launch  sensor_parameters_robot.launch  sr2.launch  sr2_afts.launch  sr2_fts.launch  sr2_object_tracking.launch  sr2_object_tracking_robot.launch
urdf/: ftm115.urdf.xacro  neck.urdf.xacro  raw3-5.urdf.xacro  sr2.urdf.xacro
urdf/components/: fts.urdf.xacro  mini58.urdf.xacro  neck.urdf.xacro  neck_camera.urdf.xacro  object_tracking.urdf.xacro  sick_visionary_t.urdf.xacro
