<?xml version="1.0"?>
<package format="2">
  <name>sr2_bringup</name>
  <version>0.3.0</version>
  <description>The sr2_bringup package</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

  <license>LGPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sr2_bringup</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ati_force_torque</depend>
  <depend>cob_bringup</depend>
  <depend>cob_navigation_global</depend>
  <depend>iirob_led</depend>
  <depend>cob_script_server</depend>
  <depend>robot_state_publisher</depend>
  <depend>teleop_twist_joy</depend>
  <depend>cob_default_robot_config</depend>
  <depend>tf2_ros</depend>
  <depend>sick_visionary_t_driver</depend>
  <depend>gazebo_ros</depend>
  <depend>cob_mapping_slam</depend>
  <depend>cob_gazebo_worlds</depend>
  <depend>iirob_filters</depend>
  <depend>filters</depend>


  <test_depend>roslaunch</test_depend>

</package>
